Fix PEP8 and others things

--- a/templates/bro/home.html
+++ b/templates/bro/home.html
@@ -1,6 +1,6 @@
 <h2>
     {% load static %}
-    &nbsp;&nbsp;&nbsp;<img src="{% static 'bro/images/bro-logo.jpeg' %}" alt="Bro logo" width="110px"></h2>
+    &nbsp;&nbsp;&nbsp;<img src="{% static 'bro/images/bro-logo.jpeg' %}" alt="Bro logo" width="110px">
 </h2>
 <button type="button" class="btn btn-secondary" onclick="window.location.href='/admin/bro/bro/add/'">Add new instance
 </button>
