Fix server host name
(cherry picked from commit fc8990e)

--- a/templates/bro/home.html
+++ b/templates/bro/home.html
@@ -14,7 +14,7 @@
                 {% load status %}
                 {% for instance in instances.bro %}
                 <a class="list-group-item list-group-item-{{ instance.id|status }} list-group-item-action"
-                   href="{% url 'bro:probe_index' instance.id %}">{{ instance }} - {{ instance.host }}
+                   href="{% url 'bro:probe_index' instance.id %}">{{ instance }} - {{ instance.server.host }}
                 </a>
                 {% endfor %}
             </div>
